ghc-4335c07/testsuite/tests/typecheck/should_fail/tcfail171.stderr

tcfail171.hs:9:10: error:
    • No instance for (PrintfArg a) arising from a use of ‘printf’
      Possible fix:
        add (PrintfArg a) to the context of
          the type signature for:
            phex :: forall a b. a -> b
    • In the expression: printf "0x%x" x
      In an equation for ‘phex’: phex x = printf "0x%x" x
